--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 img,
 button{display: block;}
 
-a{text-decoration: none; cursor: pointer;}
+a{text-decoration: none;}
 
 button{
     background: none;
@@ -178,6 +178,7 @@ body{
 
 .navbar-list .navbar-link{
     font-size: 1.5rem;
+     cursor: pointer;
 }
 .navbar-list .navbar-link.active{
     color: var(--color-text);
